Fix alignment of cats

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,8 +5,11 @@ h1 {
 	text-align:center; 
 }
 
+.centered {
+	margin: 0 auto;
+}
+
 pre {
-	text-alignment: center;
-	width: 100%;
-	height: 100%;
+	border: none;
+	background-color: #fff;
 }
